@startuml
!theme plain
hide stereotype
skinparam classAttributeIconSize 0

' ==================== LAYERS PACKAGES ====================

package "Routes Layer" {
    class authRoute
    class auctionRoute
    class itemRoute
    class userRoute
}

package "Controllers Layer" {
    class AuthController
    class AuctionController
    class BidController
    class ItemController
    class UserController
    class TransactionController
}

package "Managers Layer" {
    interface IAuctionManager
    interface IWalletManager
    class AuctionManager
    class WalletManager
}

package "Services Layer" {
    class AuctionService
    class BidService
    class ItemService
    class UserService
    class TransactionService
}

package "Repositories Layer" {
    class AuctionRepository
    class BidRepository
    class ItemRepository
    class UserRepository
    class TransactionRepository
    class SessionRepository
}

package "Models Layer" {
    class User
    class Auction
    class Bid
    class Item
    class Transaction
    class Session
}

package "Domain Layer - Auction State" {
    abstract class AuctionState
    class ActiveState
    class EndedState
    class UpcomingState
    class AuctionStateFactory
}

package "Domain Layer - Bidding" {
    interface BidValidationStrategy
    class StandardBidValidation
}

' ==================== RELATIONSHIPS ====================

' Routes -> Controllers
authRoute --> AuthController
auctionRoute --> AuctionController
auctionRoute --> BidController
itemRoute --> ItemController
userRoute --> UserController
userRoute --> TransactionController

' Controllers -> Managers
AuthController --> IAuctionManager
AuctionController --> IAuctionManager
BidController --> IAuctionManager
UserController --> IWalletManager
TransactionController --> IWalletManager

' Managers -> Interfaces (Implements)
AuctionManager ..|> IAuctionManager
WalletManager ..|> IWalletManager

' Managers -> Services (uses)
AuctionManager --> AuctionService
AuctionManager --> BidService
WalletManager --> TransactionService
WalletManager --> UserService

' Managers -> Domain
AuctionManager --> AuctionStateFactory
AuctionManager --> BidValidationStrategy

' Services -> Repositories
AuctionService --> AuctionRepository
BidService --> BidRepository
ItemService --> ItemRepository
UserService --> UserRepository
TransactionService --> TransactionRepository

' Repositories -> Models
AuctionRepository --> Auction
BidRepository --> Bid
ItemRepository --> Item
UserRepository --> User
TransactionRepository --> Transaction
SessionRepository --> Session

' Domain - State Pattern
AuctionState <|-- ActiveState
AuctionState <|-- EndedState
AuctionState <|-- UpcomingState
AuctionStateFactory --> AuctionState

' Domain - Strategy Pattern
BidValidationStrategy <|.. StandardBidValidation

@enduml